objects/JSON_Generator__mdt.object
<CustomObject>
    <fields>
        <fullName>Apex_Class_API_Name__c</fullName>
        <label>Apex Class API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callout_Name__c</fullName>
        <label>Callout Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Object_Field_API_Name__c</fullName>
        <label>Object Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_JSON_Generator__c</fullName>
        <label>Parent JSON Generator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <label>Property Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <label>Property Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Array</fullName>
                    <default>true</default>
                    <label>Array</label>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Static_Value__c</fullName>
        <label>Static Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Name__c</fullName>
        <label>sObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>JSON Generator</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>DeveloperName</columns>
        <columns>IsProtected</columns>
        <columns>Apex_Class_API_Name__c</columns>
        <columns>Callout_Name__c</columns>
        <columns>Is_Disabled__c</columns>
        <columns>Is_Start__c</columns>
        <columns>Object_Field_API_Name__c</columns>
        <columns>Parent_JSON_Generator__c</columns>
        <columns>Property_Name__c</columns>
        <columns>Property_Type__c</columns>
        <columns>sObject_Name__c</columns>
        <columns>Static_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
    </listViews>
    <pluralLabel>JSONs Generator</pluralLabel>
    <validationRules>
        <fullName>sObject_Name_is_only_for_is_Start_true</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Is_Start__c,  ISBLANK( sObject_Name__c ) ,  NOT(ISBLANK( sObject_Name__c )) )</errorConditionFormula>
        <errorMessage>The sObject name should be populated only for is start true</errorMessage>
    </validationRules>
</CustomObject>